--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
-  --color-green: #b9ff63;
+  --color-green: #feb546;
+  /* #b9ff63; */
 
   /* Font size */
   --font-large: 48px;
@@ -42,6 +43,7 @@
 }
 
 body {
+  background-color: #f3f4f7;
   margin: 0;
   font-family: "Open Sans", sans-serif;
   text-align: center;
@@ -81,8 +83,10 @@ input {
 
 .title div:nth-child(1) {
   color: var(--color-green);
-  font-size: 50px;
+  font-size: 70px;
   font-weight: 800;
+  text-shadow: 0.35rem 0.35rem #ff3852;
+  /* , 0.7rem 0.7rem #ffc14f; */
 }
 .title div:nth-child(2) {
   color: black;
@@ -110,7 +114,7 @@ section {
 .textInput {
   resize: none;
   width: 100%;
-  height: 500px;
+  height: 300px;
   border-radius: 8px;
   border-color: var(--color-light-grey);
   margin-bottom: 30px;
@@ -138,6 +142,11 @@ section {
   border: 1px solid var(--color-light-grey);
 }
 
+.tdReadingTime {
+  font-weight: 800;
+  color: black;
+}
+
 /* .counter {
   display: flex;
   justify-content: space-around;
@@ -159,8 +168,8 @@ section {
 } */
 
 .subtitle {
-  font-size: 20px;
-  margin-bottom: 20px;
+  font-size: 30px;
+  margin-bottom: 30px;
 }
 
 .readingTimeContainer {
@@ -171,6 +180,7 @@ section {
 /* slider */
 
 .sliderContainer {
+  padding-top: 20px;
   /* display: flex;
   flex-direction: column;
   align-items: center; */
@@ -191,18 +201,22 @@ section {
 }
 
 .box1 {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 30px;
+}
+
+.box1 p:nth-child(1) {
+  word-spacing: 100px;
 }
 
 /* The slider itself */
 .slider {
-  margin-top: 30px;
-
   -webkit-appearance: none; /* Override default CSS styles */
   appearance: none;
-  width: 100%; /* Full-width */
+  width: 80%; /* Full-width */
   /* height: 25px; Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
@@ -242,12 +256,26 @@ section {
 /* Customize */
 
 .customizeContainer {
+  padding-top: 20px;
   flex-basis: 50%;
 }
 
 .box2 {
   margin-top: 30px;
   /* font-size: 20px; */
+}
+
+.stopWatch {
+  width: 50%;
+
+  background-color: var(--color-green);
+  color: var(--color-dark-grey);
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.stopWatch button {
+  color: var(--color-dark-grey);
 }
 
 .time {
