--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   --color-orange: #feb546;
   --color-black: #000000;
   --color-green: #feb546;
+  --color-second: #ffdba3;
+  --color-slider: #ff9b00;
   /* #b9ff63; */
 
   /* Font size */
@@ -134,7 +136,7 @@ section {
 }
 
 .counter tr:nth-child(1) {
-  background-color: var(--color-green);
+  background-color: var(--color-second);
 }
 
 .counter td {
@@ -177,6 +179,22 @@ section {
   display: flex;
 }
 
+.radioBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+[name="checking"] {
+  transform: scale(2);
+  margin-right: 12px;
+}
+
+label {
+  font-size: 25px;
+  font-weight: 700;
+}
+
 /* slider */
 
 .sliderContainer {
@@ -186,10 +204,11 @@ section {
   align-items: center; */
   border-right: 1px solid var(--color-light-grey);
   flex-basis: 50%;
+  background-color: var(--color-second);
 }
 .sliderContainer label {
   /* flex-basis: 10%; */
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 
 .sliderContainer .slider {
@@ -238,7 +257,7 @@ section {
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: var(--color-green); /* Green background */
+  background: var(--color-slider); /* Green background */
   cursor: pointer; /* Cursor on hover */
   /* height: 25px; */
   border-radius: 50%;
@@ -268,7 +287,7 @@ section {
 .stopWatch {
   width: 50%;
 
-  background-color: var(--color-green);
+  background-color: var(--color-second);
   color: var(--color-dark-grey);
   margin: 0 auto;
   margin-bottom: 20px;
@@ -276,6 +295,16 @@ section {
 
 .stopWatch button {
   color: var(--color-dark-grey);
+}
+
+#testStartBtn {
+  border: 1px solid green;
+  color: green;
+}
+
+#testStopBtn {
+  border: 1px solid red;
+  color: red;
 }
 
 .time {
