--- a/style.css
+++ b/style.css
@@ -72,14 +72,15 @@ a {
 
 textarea,
 input {
-  border-radius: 8px;
+  border-radius: 4px;
   border-color: var(--color-light-grey);
+  font-size: 18px;
 }
 
 /* title */
 
 .title {
-  padding: 50px 0;
+  padding: 30px 0;
   /* border: 1px solid black; */
 }
 
@@ -101,9 +102,8 @@ input {
   font-weight: 600;
 }
 
-/* section */
-
-section {
+/* main section */
+#main {
   text-align: center;
   padding: 0px 50px;
   width: 100%;
@@ -130,7 +130,6 @@ section {
 
   /* border가 한줄로 나오도록 한다. */
   border-collapse: collapse;
-  margin-bottom: 30px;
   font-size: 20px;
   color: var(--color-dark-grey);
 }
@@ -171,7 +170,8 @@ section {
 
 .subtitle {
   font-size: 30px;
-  margin-bottom: 30px;
+  padding: 30px 0;
+  font-weight: 700;
 }
 
 .readingTimeContainer {
@@ -192,7 +192,8 @@ section {
 
 label {
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 600;
+  color: black;
 }
 
 /* slider */
@@ -205,6 +206,7 @@ label {
   border-right: 1px solid var(--color-light-grey);
   flex-basis: 50%;
   background-color: var(--color-second);
+  color: var(--color-dark-grey);
 }
 .sliderContainer label {
   /* flex-basis: 10%; */
@@ -220,7 +222,7 @@ label {
 }
 
 .box1 {
-  margin-top: 30px;
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -275,22 +277,31 @@ label {
 /* Customize */
 
 .customizeContainer {
+  color: var(--color-dark-grey);
   padding-top: 20px;
   flex-basis: 50%;
 }
 
 .box2 {
-  margin-top: 30px;
+  margin-top: 15px;
   /* font-size: 20px; */
 }
 
 .stopWatch {
-  width: 50%;
-
-  background-color: var(--color-second);
-  color: var(--color-dark-grey);
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.stopWatch > div:nth-child(1) {
+  width: 100%;
+  border-right: 1px solid var(--color-dark-grey);
+  flex-basis: 50%;
+}
+
+.stopWatch > div:nth-child(2) {
+  flex-basis: 50%;
 }
 
 .stopWatch button {
@@ -314,22 +325,58 @@ label {
 .minutes,
 .seconds {
   width: 50px;
-  height: 20px;
+  height: 25px;
 }
 
 .textInput2 {
   resize: none;
-  width: 80%;
+  width: 90%;
   height: 70px;
+  margin-bottom: 0;
 }
 
-/* 
-  .ui-slider-tick {
-    position: absolute;
-    width: 2px;
-    height: 16px;
-    z-index: -1;
-  } */
+.box2 > p {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+
+  border-bottom: 1px solid var(--color-dark-grey);
+}
+
+.cpm2,
+.speed {
+  font-size: 20px;
+}
+
+/* ID , about me */
+
+#contact {
+  background-color: #ffedd1;
+}
+
+.email {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icons img {
+  width: 50px;
+  height: 50px;
+  border-radius: 6px;
+  margin: 10px;
+}
+
+.copyright {
+  padding-bottom: 30px;
+}
 
 /* media query  */
 /* 글자를 작게 만들어, 한줄에 나오도록 */
