--- a/style.css
+++ b/style.css
@@ -170,8 +170,16 @@ input {
 
 .subtitle {
   font-size: 30px;
-  padding: 30px 0;
+  padding-top: 30px;
   font-weight: 700;
+}
+
+.paragraph {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 30px;
+  font-size: 14px;
+  color: var(--color-dark-grey);
 }
 
 .readingTimeContainer {
@@ -222,7 +230,7 @@ label {
 }
 
 .box1 {
-  margin-top: 15px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -231,6 +239,10 @@ label {
 
 .box1 p:nth-child(1) {
   word-spacing: 100px;
+}
+
+.cpmText {
+  color: black;
 }
 
 /* The slider itself */
@@ -277,7 +289,7 @@ label {
 /* Customize */
 
 .customizeContainer {
-  color: var(--color-dark-grey);
+  color: black;
   padding-top: 20px;
   flex-basis: 50%;
 }
@@ -287,24 +299,30 @@ label {
   /* font-size: 20px; */
 }
 
-.stopWatch {
+.box3 {
   width: 100%;
   margin: 0 auto;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
-.stopWatch > div:nth-child(1) {
+/* stopWatch */
+.box3 > div:nth-child(1) {
   width: 100%;
   border-right: 1px solid var(--color-dark-grey);
   flex-basis: 50%;
 }
 
-.stopWatch > div:nth-child(2) {
+.stopWatch > p {
+  color: black;
+  font-weight: 600;
+}
+
+.box3 > div:nth-child(2) {
   flex-basis: 50%;
 }
 
-.stopWatch button {
+.box3 button {
   color: var(--color-dark-grey);
 }
 
@@ -355,8 +373,13 @@ label {
   background-color: #ffedd1;
 }
 
+.description {
+  padding-top: 20px;
+  color: var(--color-dark-grey);
+}
+
 .email {
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 20px;
   font-weight: 600;
 }
