--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ input {
 
 .subtitle {
   font-size: 30px;
-  padding-top: 30px;
+  padding: 30px 0;
   font-weight: 700;
 }
 
@@ -243,6 +243,10 @@ label {
 
 .cpmText {
   color: black;
+  text-align: left;
+  /* padding-left: 55px; */
+  width: 80%;
+  margin: auto;
 }
 
 /* The slider itself */
@@ -374,7 +378,7 @@ label {
 }
 
 .description {
-  padding-top: 20px;
+  /* padding-top: 20px; */
   color: var(--color-dark-grey);
 }
 
