--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ input {
   height: 200px;
   border-radius: 8px;
   border-color: var(--color-light-grey);
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 /* counter */
@@ -155,6 +155,7 @@ input {
   border-collapse: collapse;
   font-size: var(--font-small);
   color: var(--color-dark-grey);
+  margin-bottom: 4px;
 }
 
 .counter tr:nth-child(1) {
@@ -169,6 +170,10 @@ input {
 .tdReadingTime {
   font-weight: 800;
   color: black;
+}
+
+.readingTimeBox {
+  /* background-color: color-; */
 }
 
 /* .counter {
@@ -487,7 +492,7 @@ label {
   }
 
   .textInput {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 
   .subtitle {
