--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ input {
 .paragraph {
   width: 90%;
   margin: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: var(--font-tiny);
   color: var(--color-dark-grey);
   line-height: 18px;
@@ -244,7 +244,7 @@ label {
   /* display: flex;
   flex-direction: column;
   align-items: center; */
-  border-right: 1px solid var(--color-light-grey);
+  /* border-right: 1px solid var(--color-light-grey); */
   flex-basis: 50%;
   background-color: var(--color-second);
   color: var(--color-dark-grey);
@@ -393,6 +393,15 @@ label {
 
 .time {
   margin-bottom: 20px;
+}
+
+.ppt {
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+
+.ppt input {
+  width: 40px;
 }
 
 .minutes,
