--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a {
 
 textarea,
 input {
-  border-radius: 4px;
+  /* border-radius: 4px; */
   border-color: var(--color-light-grey);
   font-size: var(--font-tiny);
 }
@@ -90,7 +90,7 @@ input {
 
   color: var(--color-green);
   font-size: var(--font-large);
-  font-weight: 800;
+  font-weight: var(--weight-bold);
   /* text-shadow: 0.35rem 0.35rem #ff3852; */
 }
 
@@ -140,9 +140,10 @@ input {
   resize: none;
   width: 100%;
   height: 200px;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   border-color: var(--color-light-grey);
   margin-bottom: 0px;
+  font-size: var(--font-micro);
 }
 
 /* counter */
@@ -168,7 +169,7 @@ input {
 }
 
 .tdReadingTime {
-  font-weight: 800;
+  font-weight: var(--weight-semi-bold);
   color: black;
 }
 
@@ -199,7 +200,7 @@ input {
 .subtitle {
   font-size: var(--font-medium);
   padding: 20px 0;
-  font-weight: 700;
+  font-weight: var(--weight-bold);
 }
 
 .paragraph {
@@ -233,7 +234,7 @@ input {
 
 label {
   font-size: var(--font-regular);
-  font-weight: 600;
+  font-weight: var(--weight-semi-bold);
   color: black;
 }
 
@@ -289,6 +290,12 @@ label {
   margin-bottom: 15px;
   line-height: 20px;
   font-size: var(--font-micro);
+  /* border-collapse: collapse; */
+}
+
+.cpmText td{
+  /* text-align:center; */
+  /* border: 1px solid var(--color-light-grey); */
 }
 
 /* The slider itself */
@@ -365,7 +372,7 @@ label {
 
 .stopWatch > p {
   color: black;
-  font-weight: 600;
+  font-weight: var(--weight-semi-bold);
   font-size: var(--font-micro);
 }
 
@@ -451,9 +458,9 @@ label {
 }
 
 .email {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   font-size: var(--font-micro);
-  font-weight: 600;
+  font-weight: var(--weight-semi-bold);
 }
 
 .icons {
@@ -462,11 +469,17 @@ label {
   justify-content: center;
 }
 
+.icons a{
+  width: 30px;
+  height: 30px;
+  margin : 6px 6px;
+}
+
 .icons img {
   width: 30px;
   height: 30px;
   border-radius: 6px;
-  margin: 8px;
+  
 }
 
 .copyright {
@@ -483,8 +496,8 @@ label {
     --font-large: 14px;
     --font-medium: 14px;
     --font-regular: 12px;
-    --font-small: 10px;
-    --font-micro: 8px;
+    --font-small: 12px;
+    --font-micro: 12px;
   }
 
   .title {
