--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ input {
 /* title */
 
 .title {
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 10px;
   /* border: 1px solid black; */
   display: flex;
   flex-direction: row;
@@ -92,6 +93,13 @@ input {
   font-size: var(--font-large);
   font-weight: var(--weight-bold);
   /* text-shadow: 0.35rem 0.35rem #ff3852; */
+}
+
+.languageContainer{
+  /* position: absolute;
+  top:30px;
+  right:30px; */
+  margin-bottom:15px;
 }
 
 .notIE {
@@ -546,5 +554,12 @@ label {
 
   .email {
     margin-top: 0px;
+  }
+}
+
+
+@media screen and (max-width: 524px) {
+  :root{
+    --font-large : 15px;
   }
 }
